CGOV-3717 Fix Alignment on about and home pages
Fixed the Home Page

Move text starting with the "The Melanoma risk calculator" to the same row as the "Although an individual's risk section so the text could scale easier

Added some space between the Access Patient Risk and the "The Melanoma risk calculator"

Fixed the BootStrap Grid so the page scale nicely when being resized

--- a/melanomarisktool/styles.css
+++ b/melanomarisktool/styles.css
@@ -603,6 +603,7 @@ input.error + label.radio span {
 @media (min-width: 993px) {
   .container-fluid {
     padding-left: 5em;
+    padding-right: 5em;
   }
 }
 
@@ -610,6 +611,7 @@ input.error + label.radio span {
 
   .container-fluid {
     padding-left: 1em;
+    padding-right: 1em;
   }
 
   header img#logo {
@@ -880,4 +882,9 @@ a.disabled {
 /* Make a picture disabled by reducing the opacity. */
 .image_disabled {
   opacity: .2;
+}
+
+/* Spacer betweeen Access Patient Risk Button and Paragraph beneath it.      */
+.spaceBetweenAccessPatientRiskButtonAndParagraph {
+  margin-top : 2em;
 }
